# cnc3018-offline-controller

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.adoc  custom.py  platformio.ini  test.nc
.devcontainer/: devcontainer.json
assets/: arrows_lr.XBM  arrows_ud.XBM  arrows_zud.XBM  connected.XBM  dist.XBM  feed.XBM  locked.XBM  spindle.XBM  xbmconvert.sh
boards/: cnc3018offlinecontroller.json
cmake/: ArduinoToolchain.cmake
docs/: original.hex
lib/printfloat/: printfloat.cpp  printfloat.h
src/: CommandQueue.h  Job.cpp  Job.h  JobFsm.cpp  JobFsm.h  WatchedSerial.h  constants.h  debug.h  main.cpp
src/devices/: DeviceDetector.h  GCodeDevice.cpp  GCodeDevice.h  GrblDevice.cpp  GrblDevice.h  MarlinDevice.cpp  MarlinDevice.h  util.h
src/gcode/: gcode.h
src/ui/: DRO.cpp  DRO.h  DetectorScreen.h  DetectorUI.h  Display.cpp  Display.h  FileChooser.cpp  FileChooser.h  GrblDRO.cpp  GrblDRO.h  MarlinDRO.cpp  MarlinDRO.h  Screen.h
